# YoutubeAudioRipper

./: .gitignore  .scrutinizer.yml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  run.py  setup.py
.github/workflows/: code-performance.yml  flask-build.yml
app/: __init__.py  config.py  models.py
app/v1/: routes.py
tests/: test_app.py
